--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <h1 class="logo-name">Pink Treats Bakery</h1>
     </div>
 
+
+    <nav>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     <nav>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
