--- a/index.html
+++ b/index.html
@@ -8,89 +8,89 @@
     <link rel="icon" type="image/x-icon" href="Vanilla-Pink-Cupcake.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-
-<header id="home">
-    <div class="logo-container">
-        <img src="Vanilla-Pink-Cupcake.png" alt="Logo" class="logo">
-        <h1 class="logo-name">Pink Treats Bakery</h1>
-    </div>
-
-
-    <nav>
-        <div class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+    <header id="home">
+        <div class="logo-container">
+            <img src="Vanilla-Pink-Cupcake.png" alt="Logo" class="logo">
+            <h1 class="logo-name">Pink Treats Bakery</h1>
         </div>
-    <nav>
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
 
-<div class="image-box">
-    <img src="pinkbakery.jpeg" alt="Cupcake" class="full-width">
-    <div class="image-text">Homemade Pink Treats that are Freshly Baked Every Day!</div>
-</div>
+        <nav>
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-links" id="navLinks">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<!-- Sections -->
-<section class="menu" id="menu">
-    <h2 class="menu-title">Menu</h2>
-
-    <h2>Cupcakes</h2>
-    <ul>
-        <li>Pink Velvet Cupcake - $3.50</li>
-        <li>Strawberry Swirl Cupcake - $3.00</li>
-        <li>Cherry Blossom Cupcake - $3.25</li>
-    </ul>
-
-    <h2>Cakes</h2>
-    <ul>
-        <li>Rose Buttercream Cake - $25.00</li>
-        <li>Strawberry Shortcake - $22.00</li>
-        <li>Pink Confetti Celebration Cake - $28.00</li>
-    </ul>
-
-    <h2>Cookies</h2>
-    <ul>
-        <li>Frosted Sugar Cookies - $1.50</li>
-        <li>Pink Macarons - $2.00</li>
-        <li>Raspberry Thumbprint Cookies - $1.75</li>
-    </ul>
-</section>
-
-<section class="our-story" id="about">
-    <h2>Our Story</h2>
-    <p>At Pink Treats Bakery, every cupcake, cookie, and cake is baked with a sprinkle of love and a whole lot of pink. Family-owned and inspired by generations of home baking, we have created a cozy space where sweetness meets tradition. From fluffy pastel pastries to our signature pink velvet cupcakes, everything is made fresh each morning in small batches. Step inside and you will find not just desserts, but a celebration of family, flavor, and fun all wrapped up in a pink.</p>
-</section>
-
-<section class="contact" id="contact">
-    <h2>Contact Us</h2>
-    <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit">Send Message</button>
-    </form>
-
-    <!-- Google Maps Embed -->
-    <div class="map-container">
-        <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.856284223774!2d-73.9217340845932!3d40.76479887932674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a60e83f9d1%3A0x4472997ff7c2f013!2sAstoria%2C%20NY!5e0!3m2!1sen!2sus!4v1706750400000!5m2!1sen!2sus"
-                width="100%"
-                height="300"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+    <div class="image-box">
+        <img src="pinkbakery.jpeg" alt="Cupcake" class="full-width">
+        <div class="image-text">Homemade Pink Treats that are Freshly Baked Every Day!</div>
     </div>
-</section>
+
+    <!-- Sections -->
+    <section class="menu" id="menu">
+        <h2 class="menu-title">Menu</h2>
+
+        <h2>Cupcakes</h2>
+        <ul>
+            <li>Pink Velvet Cupcake - $3.50</li>
+            <li>Strawberry Swirl Cupcake - $3.00</li>
+            <li>Cherry Blossom Cupcake - $3.25</li>
+        </ul>
+
+        <h2>Cakes</h2>
+        <ul>
+            <li>Rose Buttercream Cake - $25.00</li>
+            <li>Strawberry Shortcake - $22.00</li>
+            <li>Pink Confetti Celebration Cake - $28.00</li>
+        </ul>
+
+        <h2>Cookies</h2>
+        <ul>
+            <li>Frosted Sugar Cookies - $1.50</li>
+            <li>Pink Macarons - $2.00</li>
+            <li>Raspberry Thumbprint Cookies - $1.75</li>
+        </ul>
+    </section>
+
+    <section class="our-story" id="about">
+        <h2>Our Story</h2>
+        <p>At Pink Treats Bakery, every cupcake, cookie, and cake is baked with a sprinkle of love and a whole lot of pink. Family-owned and inspired by generations of home baking, we have created a cozy space where sweetness meets tradition. From fluffy pastel pastries to our signature pink velvet cupcakes, everything is made fresh each morning in small batches. Step inside and you will find not just desserts, but a celebration of family, flavor, and fun all wrapped up in a pink.</p>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+
+        <!-- Google Maps Embed -->
+        <div class="map-container">
+            <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.856284223774!2d-73.9217340845932!3d40.76479887932674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a60e83f9d1%3A0x4472997ff7c2f013!2sAstoria%2C%20NY!5e0!3m2!1sen!2sus!4v1706750400000!5m2!1sen!2sus"
+                    width="100%"
+                    height="300"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </section>
+    <script src="script.js"></script>
+</body>
 
 <footer>
     <p>Follow us for sweet updates!</p>
